--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <nav>
       <div class="logo-container">
-        <a href=""><img src="images/X-logo.png" alt="" width="100"></a>
+        <a href="https://x.com/fishaidotfun"><img src="images/X-logo.png" alt="" width="100"></a>
         <a href=""><img src="images/DexScreener_logo.png" alt="" width="100"></a>  
       </div>
     </nav>
